# fin-agent

./: .gitignore  LICENSE  README.md  README.pt-BR.md  SECURITY.md  TEST_RESULTS.md  VALIDATION_REPORT.md
backend/: README.md  agent.py  main.py  prompt.toml  pyproject.toml  schemas.py  tools.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
